--- a/base.html
+++ b/base.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>livebusiness</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <table>
+        <thead>
+            <tr>
+                <th></th>
+                <th scope="col">3カ月コース</th>
+                <th scope="col">6カ月コース</th>
+                <th scope="col">12カ月コース</th>
+            </tr>
+        </thead>
