--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <tbody>
             <tr>
                 <td>料金（税込）</td>
-                <td>38,000円</td>
+                <td class="threemonth">38,000円</td>
                 <td>3ヶ月プラン×2より
                     <p>22,800円お得！</p>
                     <p>30%OFF!!</p>
